Closed
Bug 1022705
Opened 10 years ago
Closed 10 years ago
[Camera][Gecko] GonkCameraControl dtor has a worker thread dependency
Categories
(Firefox OS Graveyard :: Gaia::Camera, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
2.0 S4 (20june)
People
(Reporter: mikeh, Assigned: mikeh)
References
Details
(Keywords: crash)
Attachments
(1 file)
4.31 KB,
patch
|
jesup
:
review+
|
Details | Diff | Splinter Review |
Destructor path winds up here:
http://dxr.mozilla.org/mozilla-central/source/dom/camera/GonkCameraControl.cpp#1044
This assertion will fail if the GonkCameraControl object is destroyed on the Main Thread (or any other than the Camera Thread). Not sure what has caused this test to start failing all of a sudden
Assignee | ||
Comment 1•10 years ago
|
||
Crash and stack trace:
https://tbpl.mozilla.org/php/getParsedLog.php?id=41239098&tree=B2g-Inbound#error0
Assignee | ||
Comment 2•10 years ago
|
||
try-server push: https://tbpl.mozilla.org/?tree=Try&rev=f68d7ebf5f5e
Assignee | ||
Comment 3•10 years ago
|
||
try-server push with bug 984274 test re-enabled: https://tbpl.mozilla.org/?tree=Try&rev=655ec7a79761
Comment 4•10 years ago
|
||
I got the same problem in https://bugzilla.mozilla.org/show_bug.cgi?id=984274#c176.
I think the StopImpl() in destructor is redundant, http://dxr.mozilla.org/mozilla-central/source/dom/camera/GonkCameraControl.cpp#203 .
Assignee | ||
Comment 6•10 years ago
|
||
In short: only access 'mRecorder' inside a ReentrantMonitor.
Attachment #8437616 -
Flags: review?(rjesup)
Comment 7•10 years ago
|
||
Comment on attachment 8437616 [details] [diff] [review]
Remove GonkCameraControl dtor thread dependency, v1
Review of attachment 8437616 [details] [diff] [review]:
-----------------------------------------------------------------
StopRecordingImpl() needs to grab the monitor around mRecorder there too
::: dom/camera/GonkCameraControl.cpp
@@ +953,5 @@
> {
> MOZ_ASSERT(NS_GetCurrentThread() == mCameraThread);
>
> + ReentrantMonitorAutoEnter mon(mRecorderMonitor);
> +
trailing space
Attachment #8437616 -
Flags: review?(rjesup) → review-
Comment 8•10 years ago
|
||
Comment on attachment 8437616 [details] [diff] [review]
Remove GonkCameraControl dtor thread dependency, v1
Review of attachment 8437616 [details] [diff] [review]:
-----------------------------------------------------------------
Never mind - is is there!
Attachment #8437616 -
Flags: review- → review+
Assignee | ||
Comment 9•10 years ago
|
||
Fix nit and land with test_sandbox_permission.html reenabled.
https://hg.mozilla.org/integration/b2g-inbound/rev/81b8673cd537
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.0 S4 (20june)
You need to log in
before you can comment on or make changes to this bug.
Description
•