Bug 1022705 - allow StopRecordingImpl() to be called from any thread, r=jesup